
[TestParsePatternNoErrors/BooleanLiteralFalse - 1]
&ast.LitPat{
    Lit: &ast.BoolLit{},
    span: 0-5,
}
---

[TestParsePatternNoErrors/StringLiteral - 1]
&ast.LitPat{
    Lit: &ast.StrLit{
        Value: "hello",
    },
    span: 0-7,
}
---

[TestParsePatternNoErrors/TuplePatternWithRest - 1]
&ast.TuplePat{
    Elems: []ast.Pat{
        &ast.IdentPat{
            Name: "a",
            span: 1-2,
        },
        &ast.IdentPat{
            Name: "b",
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 8-9,
                },
                span: 8-9,
            },
            span: 4-9,
        },
        &ast.RestPat{
            Pattern: &ast.IdentPat{
                Name: "rest",
                span: 14-18,
            },
            span: 11-18,
        },
    },
    span: 0-19,
}
---

[TestParsePatternNoErrors/Identifier - 1]
&ast.IdentPat{
    Name: "x",
    span: 0-1,
}
---

[TestParsePatternNoErrors/ExtractPattern - 1]
&ast.ExtractorPat{
    Name: &ast.Ident{
        Name: "Foo",
        span: 0-3,
    },
    Args: []ast.Pat{
        &ast.IdentPat{
            Name: "a",
            span: 4-5,
        },
        &ast.IdentPat{
            Name: "b",
            span: 7-8,
        },
    },
    span: 0-9,
}
---

[TestParsePatternNoErrors/BooleanLiteralTrue - 1]
&ast.LitPat{
    Lit: &ast.BoolLit{
        Value: true,
    },
    span: 0-4,
}
---

[TestParsePatternNoErrors/NullLiteral - 1]
&ast.LitPat{
    Lit: &ast.NullLit{},
    span: 0-4,
}
---

[TestParsePatternNoErrors/NumberLiteral - 1]
&ast.LitPat{
    Lit: &ast.NumLit{
        Value: 5,
    },
    span: 0-1,
}
---

[TestParsePatternNoErrors/Wildcard - 1]
&ast.WildcardPat{
    span: 0-1,
}
---

[TestParsePatternNoErrors/UndefinedLiteral - 1]
&ast.LitPat{
    Lit: &ast.UndefinedLit{},
    span: 0-9,
}
---

[TestParsePatternNoErrors/ObjectPatternWithRest - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "a",
                span: 1-2,
            },
            span: 1-2,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "b",
                span: 4-5,
            },
            Value: &ast.IdentPat{
                Name: "c",
                span: 7-8,
            },
            span: 4-8,
        },
        &ast.ObjRestPat{
            Pattern: &ast.IdentPat{
                Name: "rest",
                span: 13-17,
            },
            span: 10-17,
        },
    },
    span: 0-18,
}
---

[TestParsePatternNoErrors/ObjectPatternWithDefaults - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "a",
                span: 1-2,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 5-6,
                },
                span: 5-6,
            },
            span: 1-6,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "b",
                span: 8-9,
            },
            Value: &ast.IdentPat{
                Name: "c",
                Default: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span: 15-22,
                    },
                    span: 15-22,
                },
                span: 11-22,
            },
            span: 8-22,
        },
    },
    span: 0-23,
}
---

[TestParsePatternNoErrors/WildcardPattern - 1]
&ast.WildcardPat{
    span: 0-1,
}
---

[TestParsePatternNoErrors/RegexLiteral - 1]
&ast.LitPat{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
    },
    span: 0-9,
}
---

[TestParsePatternNoErrors/IdentifierWithTypeAnnotation - 1]
&ast.IdentPat{
    Name: "x",
    TypeAnn: &ast.NumberTypeAnn{
        span: 2-8,
    },
    span: 0-8,
}
---

[TestParsePatternNoErrors/IdentifierWithTypeAnnotationAndDefault - 1]
&ast.IdentPat{
    Name: "x",
    TypeAnn: &ast.NumberTypeAnn{
        span: 2-8,
    },
    Default: &ast.LiteralExpr{
        Lit: &ast.NumLit{
            Value: 5,
            span: 11-12,
        },
        span: 11-12,
    },
    span: 0-12,
}
---

[TestParsePatternNoErrors/ObjectPatternWithKeyValueAndInlineTypeAnnotations - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.IdentPat{
                Name: "a",
                TypeAnn: &ast.NumberTypeAnn{
                    span: 6-12,
                },
                span: 4-12,
            },
            span: 1-12,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 14-15,
            },
            Value: &ast.IdentPat{
                Name: "b",
                TypeAnn: &ast.StringTypeAnn{
                    span: 19-25,
                },
                span: 17-25,
            },
            span: 14-25,
        },
    },
    span: 0-26,
}
---

[TestParsePatternNoErrors/ObjectPatternWithKeyValueInlineTypeAnnotationsAndDefaults - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.IdentPat{
                Name: "a",
                TypeAnn: &ast.NumberTypeAnn{
                    span: 6-12,
                },
                Default: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        span: 15-16,
                    },
                    span: 15-16,
                },
                span: 4-16,
            },
            span: 1-16,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 18-19,
            },
            Value: &ast.IdentPat{
                Name: "b",
                TypeAnn: &ast.StringTypeAnn{
                    span: 23-29,
                },
                Default: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span: 32-39,
                    },
                    span: 32-39,
                },
                span: 21-39,
            },
            span: 18-39,
        },
    },
    span: 0-40,
}
---

[TestParsePatternNoErrors/ObjectPatternWithInlineTypeAnnotations - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 1-2,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 4-10,
            },
            span: 1-10,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "y",
                span: 12-13,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 15-21,
            },
            span: 12-21,
        },
    },
    span: 0-22,
}
---

[TestParsePatternNoErrors/ObjectPatternWithInlineTypeAnnotationsAndDefaults - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 1-2,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 4-10,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    span: 13-14,
                },
                span: 13-14,
            },
            span: 1-14,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "y",
                span: 16-17,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 19-25,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "hello",
                    span: 28-35,
                },
                span: 28-35,
            },
            span: 16-35,
        },
    },
    span: 0-36,
}
---

[TestParsePatternNoErrors/TuplePatternWithTypeAnnotations - 1]
&ast.TuplePat{
    Elems: []ast.Pat{
        &ast.IdentPat{
            Name: "x",
            TypeAnn: &ast.NumberTypeAnn{
                span: 3-9,
            },
            span: 1-9,
        },
        &ast.IdentPat{
            Name: "y",
            TypeAnn: &ast.StringTypeAnn{
                span: 13-19,
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 22-23,
                },
                span: 22-23,
            },
            span: 11-23,
        },
    },
    span: 0-24,
}
---

[TestParsePatternNoErrors/InstancePattern - 1]
&ast.InstancePat{
    ClassName: &ast.Ident{
        Name: "Point",
        span: 0-5,
    },
    Object: &ast.ObjectPat{
        Elems: []ast.ObjPatElem{
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "x",
                    span: 7-8,
                },
                span: 7-8,
            },
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "y",
                    span: 10-11,
                },
                span: 10-11,
            },
        },
        span: 0-12,
    },
    span: 0-12,
}
---

[TestParsePatternNoErrors/NamespacedInstancePattern - 1]
&ast.InstancePat{
    ClassName: &ast.Member{
        Left: &ast.Ident{
            Name: "MyNamespace",
            span: 0-11,
        },
        Right: &ast.Ident{
            Name: "Point",
            span: 12-17,
        },
    },
    Object: &ast.ObjectPat{
        Elems: []ast.ObjPatElem{
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "x",
                    span: 19-20,
                },
                span: 19-20,
            },
            &ast.ObjShorthandPat{
                Key: &ast.Ident{
                    Name: "y",
                    span: 22-23,
                },
                span: 22-23,
            },
        },
        span: 0-24,
    },
    span: 0-24,
}
---

[TestParsePatternNoErrors/NamespacedExtractPattern - 1]
&ast.ExtractorPat{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "MyNamespace",
            span: 0-11,
        },
        Right: &ast.Ident{
            Name: "Foo",
            span: 12-15,
        },
    },
    Args: []ast.Pat{
        &ast.IdentPat{
            Name: "a",
            span: 16-17,
        },
        &ast.IdentPat{
            Name: "b",
            span: 19-20,
        },
    },
    span: 0-21,
}
---

[TestParsePatternNoErrors/QualifiedExtractPatternNoArgs - 1]
&ast.ExtractorPat{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Option",
            span: 0-6,
        },
        Right: &ast.Ident{
            Name: "None",
            span: 7-11,
        },
    },
    span: 0-11,
}
---

[TestParsePatternNoErrors/ObjectPatternWithMutShorthand - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 5-6,
            },
            Mutable: true,
            span: 1-6,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "y",
                span: 8-9,
            },
            span: 8-9,
        },
    },
    span: 0-10,
}
---

[TestParsePatternNoErrors/MutIdent - 1]
&ast.IdentPat{
    Name: "x",
    Mutable: true,
    span: 0-5,
}
---

[TestParsePatternNoErrors/MutIdentWithTypeAnnotation - 1]
&ast.IdentPat{
    Name: "x",
    Mutable: true,
    TypeAnn: &ast.NumberTypeAnn{
        span: 7-13,
    },
    span: 0-13,
}
---

[TestParsePatternNoErrors/ObjectPatternMixedMutShorthandAndKeyValue - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "x",
                span: 5-6,
            },
            Mutable: true,
            span: 1-6,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 8-9,
            },
            Value: &ast.IdentPat{
                Name: "a",
                Mutable: true,
                span: 11-16,
            },
            span: 8-16,
        },
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "z",
                span: 18-19,
            },
            span: 18-19,
        },
    },
    span: 0-20,
}
---

[TestParsePatternNoErrors/ObjectPatternWithMutKeyValue - 1]
&ast.ObjectPat{
    Elems: []ast.ObjPatElem{
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.IdentPat{
                Name: "a",
                Mutable: true,
                span: 4-9,
            },
            span: 1-9,
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "y",
                span: 11-12,
            },
            Value: &ast.IdentPat{
                Name: "b",
                span: 14-15,
            },
            span: 11-15,
        },
    },
    span: 0-16,
}
---
